--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "homepage": ""
+    "homepage": "https://zzonghyeon.github.io/wiz_music/"
   },
   "dependencies": {
     "gh-pages": "^6.3.0",
